--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,12 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet"  href="./assets/css/normalize.css"/>
+  <!-- <link
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    rel="stylesheet"
+  /> -->
+  <link rel="stylesheet" href="assets/css/all.min.css"/>
 </head>
 <body>
   <app-root></app-root>
